--- a/SilentRevolution/Base.lproj/Main.storyboard
+++ b/SilentRevolution/Base.lproj/Main.storyboard
@@ -12,6 +12,7 @@
             <string>JuraMedium</string>
             <string>JuraMedium</string>
             <string>JuraMedium</string>
+            <string>JuraMedium</string>
         </mutableArray>
     </customFonts>
     <scenes>
@@ -185,11 +186,60 @@
                         <outlet property="button1" destination="fUo-DL-uh8" id="xth-Jx-0A0"/>
                         <outlet property="button2" destination="SKR-rT-kkT" id="c1r-Vp-f9g"/>
                         <outlet property="button3" destination="eSX-M8-pE6" id="kNt-bv-tOz"/>
+                        <segue destination="Af0-nL-frh" kind="presentation" identifier="voteToThankYou" id="5v2-18-Tfu"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xdl-dK-2O1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1944" y="82"/>
+        </scene>
+        <!--Thank You View Controller-->
+        <scene sceneID="gX5-Io-FJt">
+            <objects>
+                <viewController id="Af0-nL-frh" customClass="ThankYouViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="jh7-bO-HHD"/>
+                        <viewControllerLayoutGuide type="bottom" id="REJ-RT-XHY"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Ir4-rY-jyo">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Thank You" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zpo-wq-NGI">
+                                <rect key="frame" x="213" y="281" width="174" height="37"/>
+                                <color key="backgroundColor" red="0.51764705879999995" green="0.68235294120000001" blue="0.1764705882" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="174" id="2c7-75-b5m"/>
+                                    <constraint firstAttribute="height" constant="37" id="Te0-sV-xvS"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="JuraMedium" family="Jura" pointSize="33"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o1K-IS-6eV">
+                                <rect key="frame" x="27" y="175" width="46" height="30"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="onBackButtonPressed:" destination="Af0-nL-frh" eventType="touchUpInside" id="Jaw-Mv-PTr"/>
+                                    <segue destination="Awi-eH-0BQ" kind="unwind" identifier="ThankYouToMap" unwindAction="unwindToMapVC:" id="SZV-uz-eO0"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="Zpo-wq-NGI" secondAttribute="centerX" id="4pO-jN-47b"/>
+                            <constraint firstAttribute="centerY" secondItem="Zpo-wq-NGI" secondAttribute="centerY" id="Csy-4N-VoB"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kDU-q7-xri" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="Awi-eH-0BQ" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="2760" y="82"/>
         </scene>
         <!--Details View Controller-->
         <scene sceneID="EAN-hK-yz0">
