--- a/SilentRevolution/Base.lproj/Main.storyboard
+++ b/SilentRevolution/Base.lproj/Main.storyboard
@@ -79,7 +79,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="onVoteButtonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="4wD-pN-cJY"/>
+                                    <action selector="onVoteButtonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Xz0-4x-UBy"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -102,19 +102,125 @@
                         <outlet property="detailsButton" destination="5qf-p7-E76" id="cpD-pY-BFU"/>
                         <outlet property="eventButton" destination="ED9-I3-rdU" id="Vvz-Zb-2t4"/>
                         <outlet property="mapView" destination="AkM-Fj-kYf" id="CSz-s5-fIG"/>
-                        <outlet property="voteButton" destination="Byl-1W-u98" id="dxQ-Ql-xnQ"/>
+                        <outlet property="voteButton" destination="Byl-1W-u98" id="W2w-1q-5F8"/>
                         <segue destination="zVY-lp-YO6" kind="show" identifier="mapToDetails" id="3tn-KW-o6s"/>
-                        <segue destination="CrE-v1-FpV" kind="show" identifier="mapToVote" id="g7i-Ko-33n"/>
+                        <segue destination="MPv-lC-2Po" kind="show" identifier="mapToVote" id="NtN-Us-rFN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1185" y="-343"/>
         </scene>
+        <!--Vote Pick View Controller-->
+        <scene sceneID="3Gs-wt-eFv">
+            <objects>
+                <viewController id="MPv-lC-2Po" customClass="VotePickViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="5Qv-Fr-1si"/>
+                        <viewControllerLayoutGuide type="bottom" id="AbQ-9P-oIn"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="J06-Yf-GIa">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ktM-te-g0H">
+                                <rect key="frame" x="262" y="323" width="77" height="30"/>
+                                <state key="normal" title="Vote for DJ">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="DJButtonPressed:" destination="MPv-lC-2Po" eventType="touchUpInside" id="IYg-W3-fdD"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hEG-O4-gWg">
+                                <rect key="frame" x="251" y="202" width="99" height="30"/>
+                                <state key="normal" title="Vote for Music">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="musicButtonPressed:" destination="MPv-lC-2Po" eventType="touchUpInside" id="wGn-Cq-GZL"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <segue destination="CrE-v1-FpV" kind="show" identifier="voteDJSegue" id="VGo-3W-Qbw"/>
+                        <segue destination="yo7-tZ-xYL" kind="show" identifier="voteMusicSegue" id="cl0-Tv-2h2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="meF-A8-Efb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1889" y="231"/>
+        </scene>
+        <!--Music Vote View Controller-->
+        <scene sceneID="UZE-71-S0J">
+            <objects>
+                <viewController id="yo7-tZ-xYL" customClass="MusicVoteViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="qlE-bX-wZh"/>
+                        <viewControllerLayoutGuide type="bottom" id="u6s-RA-JHw"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="HzW-HC-G7p">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="129" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="JmW-aD-XOn">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellID" rowHeight="129" id="MvT-dn-lWb" customClass="MusicTableViewCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="MvT-dn-lWb" id="0K6-3T-CGM">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Song" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QYH-A9-iar">
+                                                    <rect key="frame" x="132" y="53" width="41" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2fU-1M-iXF">
+                                                    <rect key="frame" x="436" y="49" width="46" height="30"/>
+                                                    <state key="normal" title="Button">
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                </button>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="yo7-tZ-xYL" id="17M-gP-y9t"/>
+                                    <outlet property="delegate" destination="yo7-tZ-xYL" id="C8o-gn-7f2"/>
+                                </connections>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WUl-jW-uQd">
+                                <rect key="frame" x="533" y="446" width="46" height="30"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="onButtonPressed:" destination="yo7-tZ-xYL" eventType="touchUpInside" id="bnl-a8-Urp"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="JmW-aD-XOn" id="ts6-xx-6TV"/>
+                        <segue destination="Af0-nL-frh" kind="presentation" identifier="musicVotetToThankYou" id="UZZ-e5-tKO"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RnQ-KK-6mz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2703" y="76"/>
+        </scene>
         <!--Vote View Controller-->
         <scene sceneID="zu4-BV-3zv">
             <objects>
-                <viewController id="CrE-v1-FpV" customClass="VoteViewController" sceneMemberID="viewController">
+                <viewController id="CrE-v1-FpV" customClass="DJVoteViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="8Jf-3V-83K"/>
                         <viewControllerLayoutGuide type="bottom" id="eVA-Fw-EeR"/>
@@ -186,12 +292,12 @@
                         <outlet property="button1" destination="fUo-DL-uh8" id="xth-Jx-0A0"/>
                         <outlet property="button2" destination="SKR-rT-kkT" id="c1r-Vp-f9g"/>
                         <outlet property="button3" destination="eSX-M8-pE6" id="kNt-bv-tOz"/>
-                        <segue destination="Af0-nL-frh" kind="presentation" identifier="voteToThankYou" id="5v2-18-Tfu"/>
+                        <segue destination="Af0-nL-frh" kind="presentation" identifier="DJVoteToThankYou" id="5v2-18-Tfu"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xdl-dK-2O1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1944" y="82"/>
+            <point key="canvasLocation" x="2703" y="722"/>
         </scene>
         <!--Thank You View Controller-->
         <scene sceneID="gX5-Io-FJt">
@@ -227,6 +333,16 @@
                                     <segue destination="Awi-eH-0BQ" kind="unwind" identifier="ThankYouToMap" unwindAction="unwindToMapVC:" id="SZV-uz-eO0"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="omI-Ff-QKy">
+                                <rect key="frame" x="27" y="322" width="40" height="30"/>
+                                <state key="normal" title="Share">
+                                    <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="onShareButtonPressed:" destination="Af0-nL-frh" eventType="touchUpInside" id="UT1-fK-5pW"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -239,7 +355,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kDU-q7-xri" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="Awi-eH-0BQ" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2760" y="82"/>
+            <point key="canvasLocation" x="3523" y="-125"/>
         </scene>
         <!--Details View Controller-->
         <scene sceneID="EAN-hK-yz0">
@@ -363,4 +479,7 @@
             <point key="canvasLocation" x="377" y="-343"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="UZZ-e5-tKO"/>
+    </inferredMetricsTieBreakers>
 </document>
