--- a/SilentRevolution/Base.lproj/Main.storyboard
+++ b/SilentRevolution/Base.lproj/Main.storyboard
@@ -165,7 +165,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="129" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="JmW-aD-XOn">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="129" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="JmW-aD-XOn">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -175,20 +175,27 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="MvT-dn-lWb" id="0K6-3T-CGM">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Song" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QYH-A9-iar">
-                                                    <rect key="frame" x="132" y="53" width="41" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Song Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QYH-A9-iar">
+                                                    <rect key="frame" x="132" y="53" width="87" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2fU-1M-iXF">
-                                                    <rect key="frame" x="436" y="49" width="46" height="30"/>
+                                                    <rect key="frame" x="138" y="75" width="46" height="30"/>
                                                     <state key="normal" title="Button">
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
+                                                    <connections>
+                                                        <action selector="onVoteButtonPressed:" destination="MvT-dn-lWb" eventType="touchUpInside" id="PM2-Qb-cE6"/>
+                                                        <segue destination="Af0-nL-frh" kind="presentation" id="lau-9U-Lgs"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="songLabel" destination="QYH-A9-iar" id="hmm-yX-m8e"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -196,26 +203,22 @@
                                     <outlet property="delegate" destination="yo7-tZ-xYL" id="C8o-gn-7f2"/>
                                 </connections>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WUl-jW-uQd">
-                                <rect key="frame" x="533" y="446" width="46" height="30"/>
-                                <state key="normal" title="Button">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="onButtonPressed:" destination="yo7-tZ-xYL" eventType="touchUpInside" id="bnl-a8-Urp"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="u6s-RA-JHw" firstAttribute="top" secondItem="JmW-aD-XOn" secondAttribute="bottom" id="0I4-Eh-RBk"/>
+                            <constraint firstItem="JmW-aD-XOn" firstAttribute="leading" secondItem="HzW-HC-G7p" secondAttribute="leadingMargin" constant="-16" id="4B2-ff-8lG"/>
+                            <constraint firstItem="JmW-aD-XOn" firstAttribute="top" secondItem="qlE-bX-wZh" secondAttribute="bottom" id="Ayk-Ih-ggg"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="JmW-aD-XOn" secondAttribute="trailing" constant="-16" id="beK-2E-Rhg"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="tableView" destination="JmW-aD-XOn" id="ts6-xx-6TV"/>
-                        <segue destination="Af0-nL-frh" kind="presentation" identifier="musicVotetToThankYou" id="UZZ-e5-tKO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RnQ-KK-6mz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2703" y="76"/>
+            <point key="canvasLocation" x="2765" y="-104"/>
         </scene>
         <!--Vote View Controller-->
         <scene sceneID="zu4-BV-3zv">
@@ -297,7 +300,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xdl-dK-2O1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2703" y="722"/>
+            <point key="canvasLocation" x="2765" y="614"/>
         </scene>
         <!--Thank You View Controller-->
         <scene sceneID="gX5-Io-FJt">
@@ -355,7 +358,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kDU-q7-xri" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="Awi-eH-0BQ" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="3523" y="-125"/>
+            <point key="canvasLocation" x="3556" y="153"/>
         </scene>
         <!--Details View Controller-->
         <scene sceneID="EAN-hK-yz0">
@@ -480,6 +483,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="UZZ-e5-tKO"/>
+        <segue reference="lau-9U-Lgs"/>
     </inferredMetricsTieBreakers>
 </document>
