--- a/SilentRevolution/Base.lproj/Main.storyboard
+++ b/SilentRevolution/Base.lproj/Main.storyboard
@@ -231,8 +231,8 @@
                         <constraints>
                             <constraint firstItem="u6s-RA-JHw" firstAttribute="top" secondItem="JmW-aD-XOn" secondAttribute="bottom" id="0I4-Eh-RBk"/>
                             <constraint firstItem="JmW-aD-XOn" firstAttribute="leading" secondItem="HzW-HC-G7p" secondAttribute="leadingMargin" constant="-16" id="4B2-ff-8lG"/>
-                            <constraint firstItem="JmW-aD-XOn" firstAttribute="top" secondItem="qlE-bX-wZh" secondAttribute="bottom" id="Ayk-Ih-ggg"/>
                             <constraint firstAttribute="trailingMargin" secondItem="JmW-aD-XOn" secondAttribute="trailing" constant="-16" id="beK-2E-Rhg"/>
+                            <constraint firstItem="JmW-aD-XOn" firstAttribute="top" secondItem="HzW-HC-G7p" secondAttribute="topMargin" id="mIQ-hm-nM0"/>
                         </constraints>
                     </view>
                     <connections>
@@ -255,7 +255,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="89" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="r6E-HX-aG6">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="89" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="r6E-HX-aG6">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -295,6 +295,12 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="r6E-HX-aG6" secondAttribute="trailing" constant="-16" id="14G-FI-WxC"/>
+                            <constraint firstItem="r6E-HX-aG6" firstAttribute="top" secondItem="T0L-kl-WYe" secondAttribute="topMargin" id="fzg-dC-q5t"/>
+                            <constraint firstItem="r6E-HX-aG6" firstAttribute="leading" secondItem="T0L-kl-WYe" secondAttribute="leadingMargin" constant="-16" id="nJj-YT-KO4"/>
+                            <constraint firstItem="eVA-Fw-EeR" firstAttribute="top" secondItem="r6E-HX-aG6" secondAttribute="bottom" id="qs7-OI-aSD"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="tableView" destination="r6E-HX-aG6" id="t32-LS-WMf"/>
@@ -567,6 +573,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="UL0-j6-3sc"/>
+        <segue reference="lau-9U-Lgs"/>
     </inferredMetricsTieBreakers>
 </document>
