--- a/SilentRevolution/Base.lproj/Main.storyboard
+++ b/SilentRevolution/Base.lproj/Main.storyboard
@@ -18,6 +18,7 @@
             <string>JuraMedium</string>
             <string>JuraMedium</string>
             <string>JuraMedium</string>
+            <string>JuraMedium</string>
         </mutableArray>
     </customFonts>
     <scenes>
@@ -455,11 +456,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="384" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="FJQ-2F-7Le">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="452" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="FJQ-2F-7Le">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellID" rowHeight="384" id="FZI-1l-FhA" customClass="DetailsTableViewCell">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellID" rowHeight="452" id="FZI-1l-FhA" customClass="DetailsTableViewCell">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="FZI-1l-FhA" id="pAL-c4-lYe">
@@ -505,11 +506,29 @@
                                                         <constraint firstAttribute="width" constant="286" id="wGR-6n-Ywo"/>
                                                     </constraints>
                                                 </view>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aC0-1L-3nQ">
+                                                    <rect key="frame" x="250" y="383" width="100" height="30"/>
+                                                    <color key="backgroundColor" red="0.51764705879999995" green="0.68235294120000001" blue="0.1764705882" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="hA5-2R-9sd"/>
+                                                        <constraint firstAttribute="width" constant="100" id="hcF-ca-taE"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="JuraMedium" family="Jura" pointSize="23"/>
+                                                    <state key="normal" title="Register">
+                                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="onRegisterButtonPressed:" destination="FZI-1l-FhA" eventType="touchUpInside" id="L3U-ha-H56"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="centerX" secondItem="OYf-xe-paI" secondAttribute="centerX" id="OLw-qh-22x"/>
                                                 <constraint firstItem="buq-Rg-LJj" firstAttribute="top" secondItem="pAL-c4-lYe" secondAttribute="topMargin" constant="9" id="QV7-wS-6AC"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="oE6-NY-Vy6" secondAttribute="bottom" id="Qmo-eC-AAT"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="oE6-NY-Vy6" secondAttribute="bottom" constant="68" id="Qmo-eC-AAT"/>
+                                                <constraint firstItem="aC0-1L-3nQ" firstAttribute="top" secondItem="oE6-NY-Vy6" secondAttribute="bottom" constant="8" id="RB2-Nr-sn4"/>
+                                                <constraint firstAttribute="centerX" secondItem="aC0-1L-3nQ" secondAttribute="centerX" id="dyH-By-bma"/>
                                                 <constraint firstAttribute="centerX" secondItem="buq-Rg-LJj" secondAttribute="centerX" id="i3D-GY-g60"/>
                                                 <constraint firstItem="OYf-xe-paI" firstAttribute="top" secondItem="pAL-c4-lYe" secondAttribute="topMargin" constant="261" id="lIa-Yp-4qc"/>
                                                 <constraint firstAttribute="centerX" secondItem="oE6-NY-Vy6" secondAttribute="centerX" id="ozL-py-FHG"/>
@@ -520,6 +539,7 @@
                                             <outlet property="detailEventLabel" destination="gzg-lK-K4x" id="bSq-7e-7hq"/>
                                             <outlet property="detailImageView" destination="buq-Rg-LJj" id="lVx-Ri-5PL"/>
                                             <outlet property="detailTimeLabel" destination="GD7-SS-NAq" id="SEp-lt-svI"/>
+                                            <outlet property="registerButton" destination="aC0-1L-3nQ" id="NCv-GD-t4R"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
